--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     ],
     "reporter": [
       "text-summary",
-      "html"
+      "html",
+      "json"
     ],
     "sourceMap": true,
     "instrument": true
