--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "typeRoots": [
       "node_modules/@types"
     ],
-    "outDir": "lib"
+    "outDir": "lib",
+    "sourceMap": true
   },
   "exclude": [
     "node_modules",
